--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -1,10 +1,11 @@
 name: android-build
 
-on: [push, pull_request]
+on: 
+   workflow_dispatch:
 
 jobs:
   build-apk-for-android:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
 
     steps:
     - uses: actions/checkout@v2
