--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,11 @@
 name: Build
 
-on: [push, pull_request]
+on: 
+   workflow_dispatch:
 
 jobs:
   build-linux-i386:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
 
     steps:
     - uses: actions/checkout@v2
